ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/EU_Open_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Open Order Line</label>
    <nameField>
        <displayFormat>OOL-{YYYY}-{0000000}</displayFormat>
        <label>Open Order Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>