ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>EU_Discount_Pct__c</fullName>
    <label>Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>