ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>EU_Extended_Price__c</fullName>
    <label>Extended Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>