ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Header_Order_Number_Reference__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Order_Number_Reference__c</fullName>
    <label>Order Number Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>