ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Header_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Order_Type__c</fullName>
    <label>Order Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>