ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Item__c.field-meta.xml
<CustomField>
    <fullName>EU_Item__c</fullName>
    <label>Item</label>
    <length>25</length>
    <type>Text</type>
</CustomField>