ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Open_Order__c.field-meta.xml
<CustomField>
    <fullName>EU_Open_Order__c</fullName>
    <label>Open Order</label>
    <referenceTo>EU_Open_Order__c</referenceTo>
    <relationshipLabel>Open Order Lines</relationshipLabel>
    <relationshipName>Open_Order_Lines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>