ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Open_Order_Line_Numer__c.field-meta.xml
<CustomField>
    <fullName>EU_Open_Order_Line_Numer__c</fullName>
    <label>Open Order Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>