ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Open_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EU_Open_Quantity__c</fullName>
    <label>Open Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>