ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>EU_Order_Line__c</fullName>
    <label>Order Line</label>
    <length>10</length>
    <type>Text</type>
</CustomField>