ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Order_UM__c.field-meta.xml
<CustomField>
    <fullName>EU_Order_UM__c</fullName>
    <label>Order UM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>