ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Price_Order_UM__c.field-meta.xml
<CustomField>
    <fullName>EU_Price_Order_UM__c</fullName>
    <label>Price Order UM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>