ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Source_System__c.field-meta.xml
<CustomField>
    <fullName>EU_Source_System__c</fullName>
    <label>Source System</label>
    <length>30</length>
    <type>Text</type>
</CustomField>