ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Special_Charge_Amount_Dtl__c.field-meta.xml
<CustomField>
    <fullName>EU_Special_Charge_Amount_Dtl__c</fullName>
    <label>Special Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>