ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Order_Line__c/fields/EU_Special_Charge_Code_Desc_Dtl__c.field-meta.xml
<CustomField>
    <fullName>EU_Special_Charge_Code_Desc_Dtl__c</fullName>
    <label>Special Charge Code &amp; Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>